board switcher buttons fixed, visible classes added in toggle as well for auto switch current board button

--- a/styles/action-board-styles.css
+++ b/styles/action-board-styles.css
@@ -665,7 +665,8 @@
     display: none;
   }
 
-  .blur {
-    height: 100%;
-  }
+}
+
+.visible {
+  opacity: 0.5;
 }
